[ru] HTMLRef -> HTMLSidebar

--- a/files/ru/conflicting/web/css/css_fonts_25d4b407d3e5044aeffb97faa9669a95/index.html
+++ b/files/ru/conflicting/web/css/css_fonts_25d4b407d3e5044aeffb97faa9669a95/index.html
@@ -56,4 +56,4 @@ original_slug: Web/HTML/Element/basefont
  <li>XHTML 1.0 requires a trailing slash for this element: <code>&lt;basefont /&gt;</code>.</li>
 </ul>
 
-<div>{{HTMLRef}}</div>
+<div>{{HTMLSidebar}}</div>
