--- a/files/ru/conflicting/web/html/element/input/datetime-local/index.html
+++ b/files/ru/conflicting/web/html/element/input/datetime-local/index.html
@@ -14,7 +14,7 @@ tags:
 translation_of: Web/HTML/Element/input/datetime
 original_slug: Web/HTML/Element/Input/datetime
 ---
-<div>{{HTMLRef}}{{obsolete_header}}</div>
+<div>{{HTMLSidebar}}{{obsolete_header}}</div>
 
 <p>HTML <code>&lt;input type="datetime"&gt;</code>  был элементом для ввода даты и времени (час, минута, секунда и доля секунды), а также часовой пояс. <strong>Эта функция была <a class="external external-icon" href="https://github.com/whatwg/html/issues/336">удалена из WHATWG HTML</a></strong> и больше не поддерживается в браузерах.</p>
 
