--- a/files/pt-br/conflicting/mdn/contribute/howto/create_an_interactive_exercise_to_help_learning_the_web/index.html
+++ b/files/pt-br/conflicting/mdn/contribute/howto/create_an_interactive_exercise_to_help_learning_the_web/index.html
@@ -7,7 +7,8 @@ translation_of: >-
 original_slug: >-
   MDN/Contribute/Howto/Create_an_interactive_exercise_to_help_learning_the_web/distant_example
 ---
-<div>{{MDNSidebar}}</div><div class="hiden">
+<div>{{MDNSidebar}}</div>
+
 <h2 id="O_exemplo">O exemplo</h2>
 
 <h3 id="HTML">HTML</h3>
@@ -67,8 +68,7 @@ document.addEventListener('keyup', function () {
   setColor(getInputColor());
 });
 </pre>
-</div>
 
 <h2 id="Resultado_ao_vivo">Resultado ao vivo</h2>
 
-<p>{{EmbedLiveSample('The_example', 120, 120)}}</p>
+<p>{{EmbedLiveSample('O exemplo', 120, 120)}}</p>
